--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=b8ab5ec97a541c7dd26e46c4c1cbfe03"></script>
+  
+
   </head>
   <body>
     <noscript>
@@ -14,4 +17,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <!-- <script src="../src/assets/js/fastclick.js"></script> -->
 </html>
